<resources>
    <string name="app_name">PointOfSale_Project2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ktRegister">Register</string>
    <string name="ktLogin">Login</string>
    <string name="ktPassword">Password</string>
    <string name="ktUsername">Username</string>
    <string name="userYgLogin">user Yg Login</string>
    <string name="ktuser">User</string>
    <string name="ktBarang">Barang</string>
    <string name="ktNama">Nama</string>
    <string name="ktAlamat">Alamat</string>
    <string name="ktNoTelp">Nomor Telepon</string>
    <string name="ktKasir">Kasir</string>
    <string name="ktNamaBarang">Nama Barang</string>
    <string name="ktHargaBeli">Harga Beli</string>
    <string name="ktHargaJual">Harga Jual</string>
    <string name="ktStock">Stock</string>
    <string name="parcel_user">Parcel user</string>
</resources>
