<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <!--<TextView-->
                    <!--android:id="@+id/textView2"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:text="@string/ktNama"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <EditText
                        android:id="@+id/txtNama_MasterDataUserActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktNama"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--<TextView-->
                    <!--android:id="@+id/textView3"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:layout_weight="1.5"-->
                    <!--android:text="@string/ktAlamat"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <EditText
                        android:id="@+id/txtAlamat_MasterDataUserActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktAlamat"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--<TextView-->
                    <!--android:id="@+id/textView4"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/ktNoTelp"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <EditText
                        android:id="@+id/txtNoTelp_MasterDataUserActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktNoTelp"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin">

                    <!--<TextView-->
                    <!--android:id="@+id/textView5"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/ktUsername"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <EditText
                        android:id="@+id/txtUsername_MasterDataUserActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktUsername"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--<TextView-->
                    <!--android:id="@+id/textView6"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="Password"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->


                    <EditText
                        android:id="@+id/txtPassword_MasterDataUserActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktPassword" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!--<TextView-->
                        <!--android:id="@+id/textView9"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginBottom="@dimen/margin"-->
                        <!--android:layout_marginLeft="@dimen/margin"-->
                        <!--android:layout_marginRight="@dimen/margin"-->
                        <!--android:layout_marginTop="@dimen/margin"-->
                        <!--android:layout_weight="1"-->
                        <!--android:text="TextView"-->
                        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <Spinner
                        android:id="@+id/spinnerRole_MasterData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:autofillHints="@string/ktKasir" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnAdd_MasterDataUserActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"


                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:text="Add" />

                    <Button
                        android:id="@+id/btnUpdate_MasterDataUserActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"

                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:text="Update" />

                    <Button
                        android:id="@+id/btnDelete_MasterDataUserActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:text="Delete" />

                </TableRow>


            </TableLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>