<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">



                    <EditText
                        android:id="@+id/txtNamaBarang_MasterDataBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktNamaBarang"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--<TextView-->
                    <!--android:id="@+id/textView3"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:layout_weight="1.5"-->
                    <!--android:text="@string/ktAlamat"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <EditText
                        android:id="@+id/txtHargaBeli_MasterDataBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktHargaBeli"
                        android:inputType="number" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--<TextView-->
                    <!--android:id="@+id/textView4"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/ktNoTelp"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <EditText
                        android:id="@+id/txtHargaJual_MasterDataBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktHargaJual"
                        android:inputType="number" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin">

                    <!--<TextView-->
                    <!--android:id="@+id/textView5"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="@dimen/margin"-->
                    <!--android:layout_marginLeft="@dimen/margin"-->
                    <!--android:layout_marginRight="@dimen/margin"-->
                    <!--android:layout_marginTop="@dimen/margin"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/ktUsername"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

                    <EditText
                        android:id="@+id/txtStock_MasterDataBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ktStock"
                        android:inputType="number" />
                </TableRow>


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnAdd_MasterDataBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"


                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="4"
                        android:text="Add" />

                    <Button
                        android:id="@+id/btnUpdate_MasterDataBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"

                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:text="Update" />

                    <Button
                        android:id="@+id/btnDelete_MasterDataBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:text="Delete" />

                </TableRow>


            </TableLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>